# niimbot-rs

./: Cargo.toml
examples/: get_printer_info.rs  heartbeat_monitor.rs
src/: error.rs  lib.rs  protocol.rs  serial_client.rs
src/protocol/: commands.rs  mod.rs
