[package]
name = "niimbot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = "0.12.0"
tokio = { version = "1.52.4", features = ["full"] }
futures = "0.3.32"
uuid = "1.24.0"
thiserror = "2.0.18"
log = "0.4.33"
env_logger = "0.11.11"
tokio-serial = "5.5.0"

[[example]]
name = "heartbeat_monitor"