[package]
name = "niimbot-rs"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wiktorpyk/niimbot-rs"
keywords = ["niimbot", "printer", "serial", "label"]
categories = ["hardware-support"]

[dependencies]
tokio = { version = "1.52.4", features = ["rt-multi-thread", "macros", "io-util", "time"] }
tokio-serial = "5.5.0"
serialport = "4.9.0"
thiserror = "2.0.18"
log = "0.4.33"

[dev-dependencies]
env_logger = "0.11.11"
pretty_assertions = "1.4.1"

[[example]]
name = "get_printer_info"

[[example]]
name = "heartbeat_monitor"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
